--- a/app.json
+++ b/app.json
@@ -24,6 +24,11 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "assets": ["./assets/fonts/"]
+    "assets": [
+      "./assets/fonts/"
+    ],
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
