--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "^13.0.2",
     "expo-linear-gradient": "~14.0.1",
+    "expo-secure-store": "~14.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
@@ -31,7 +32,7 @@
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
     "react-native-status-bar-height": "^2.6.0",
-    "expo-secure-store": "~14.0.0"
+    "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
