--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@tanstack/react-query": "^4.13.0",
     "expo": "~52.0.23",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^13.0.2",
